Adicionando camadas de entidades e repositorios iniciais

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,17 +1,15 @@
 # Porta do servidor em desenvolvimento
 server.port=8080
 
-# Configuração do banco de dados de desenvolvimento (PostgreSQL no Docker)
-spring.datasource.url=jdbc:postgresql://dev-db:5432/controle_parquimetro
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+# Configurações do banco de dados PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5433/mydatabase
+spring.datasource.username=myuser
+spring.datasource.password=secret
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-# Configurações do JPA
-spring.jpa.show-sql=false
+# Configuracao do Hibernate
+spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-
 # Logs
 logging.level.org.springframework=INFO
 logging.level.com.svc.controleparquimetro=DEBUG
