--- a/compose.yaml
+++ b/compose.yaml
@@ -1,12 +1,27 @@
-version: '3.1'
-
 services:
   db:
-    image: postgres
-    restart: always
+    image: postgres:13
     environment:
       POSTGRES_USER: myuser
       POSTGRES_PASSWORD: secret
       POSTGRES_DB: mydatabase
     ports:
-      - "5433:5433"
+      - "5433:5432"  # Verifique se a porta está exposta corretamente
+    healthcheck:
+      test: ["CMD", "pg_isready", "-U", "myuser", "-d", "mydatabase"]
+      interval: 10s
+      retries: 5
+      start_period: 30s
+      timeout: 10s
+
+  app:
+    build: .
+    depends_on:
+      - db
+    environment:
+      SPRING_PROFILES_ACTIVE: local
+      SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/mydatabase
+      SPRING_DATASOURCE_USERNAME: myuser
+      SPRING_DATASOURCE_PASSWORD: secret
+    ports:
+      - "8080:8080"
