--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -1,18 +1,18 @@
-server:
-  port: 8080
-
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5433/mydatabase
     username: myuser
     password: secret
     driver-class-name: org.postgresql.Driver
-  jpa:
-    show-sql: true
-    hibernate:
-      ddl-auto: update
-
-logging:
-  level:
-    org.springframework: INFO
-    com.svc.controleparquimetro: DEBUG
+    jpa:
+      hibernate:
+        ddl-auto: update
+      show-sql: true
+    hikari:
+      connection-timeout: 60000 # 60 segundos
+      max-lifetime: 1800000 # 30 minutos
+      idle-timeout: 30000 # 30 segundos
+      maximum-pool-size: 10
+  logging:
+    level:
+      org.springframework.jdbc.core: DEBUG
