--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -1,18 +1,16 @@
-server:
-  port: 8080
-
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5433/mydatabase
     username: myuser
     password: secret
     driver-class-name: org.postgresql.Driver
+    hikari:
+      connection-timeout: 60000  # Tempo de espera para a conexão
+      maximum-pool-size: 10
+
   jpa:
-    show-sql: true
     hibernate:
       ddl-auto: update
-
-logging:
-  level:
-    org.springframework: INFO
-    com.svc.controleparquimetro: DEBUG
+  logging:
+    level:
+      org.springframework: INFO
