--- a/compose.yaml
+++ b/compose.yaml
@@ -1,3 +1,5 @@
+version: '3.8'
+
 services:
   db:
     image: postgres:13
@@ -6,7 +8,7 @@ services:
       POSTGRES_PASSWORD: secret
       POSTGRES_DB: mydatabase
     ports:
-      - "5433:5432"  # Verifique se a porta está exposta corretamente
+      - "5433:5432"  # Porta mapeada para o host
     healthcheck:
       test: ["CMD", "pg_isready", "-U", "myuser", "-d", "mydatabase"]
       interval: 10s
@@ -20,7 +22,7 @@ services:
       - db
     environment:
       SPRING_PROFILES_ACTIVE: local
-      SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/mydatabase
+      SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/mydatabase  # Use a porta 5432 interna
       SPRING_DATASOURCE_USERNAME: myuser
       SPRING_DATASOURCE_PASSWORD: secret
     ports:
