--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -1,12 +1,19 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5433/mydatabase
+    url: jdbc:postgresql://localhost:5432/mydatabase
     username: myuser
     password: secret
     driver-class-name: org.postgresql.Driver
     hikari:
       connection-timeout: 60000  # Tempo de espera para a conexão
       maximum-pool-size: 10
+  flyway:
+    enabled: true
+    url: jdbc:postgresql://localhost:5432/mydatabase
+    user: myuser
+    password: secret
+    locations: classpath:db/migration
+    baseline-on-migrate: true
 
   jpa:
     hibernate:
